Wed Jun 23 06:50:00 BST 1999
	- Fixed error in errors.properties where the arguments are 0 based not
	  1 based
	- Fixed bug in postgresql.Driver where exception is thrown, then
	  intercepted rather than being passed to the calling application.
	- Removed the file postgresql/CallableStatement, as it's not used and
	  really exists in the jdbc1 & jdbc2 sub packages only.

Wed May 19 00:20:00 BST 1999
	- Internationalisation now done. Surprising that there's 68 error
	  messages in the driver ;-)

Tue May 18 07:00:00 BST 1999
	- Set the ImageViewer application to use transactions

Tue May 18 00:00:00 BST 1999
	- Just after committing, I realised why internationalisation isn't
	  working. This is now fixed (in the Makefile).

Mon May 17 23:40:00 BST 1999
	- PG_Stream.close() now attempts to send the close connection message
	  to the backend before closing the streams
	- Added batch support in the JDBC2, supplied by Yutaka Tanida
	  <yutaka@marin.or.jp>
	- Removed the old datestyle code. Now the driver uses only ISO.
	- Removed some files in the postgresql directory still in CVS that were
	  moved since 6.4.x (DatabaseMetaData.java PreparedStatement.java
	  ResultSetMetaData.java Statement.java)
	- Internationalisation of the error messages is partially implemented,
	  however it's not enabled as it only works when the jar file is
	  _not_ used, and work needs to be done.

Sun Apr 11 17:00:00 BST 1999
	- getUpdateCount() now returns the actual update count (before it
	  simply returned 1 for everything).
	- added some updates to example.basic so it would test the new update
	  count code.
	- corrected typo in a comment in Statement.java

Mon Jan 25 19:45:00 GMT 1999
	- created subfolders example/corba and example/corba/idl to hold the
	  new example showing how to hook CORBA and PostgreSQL via JDBC
	- implemented some JDBC2 methods curtesy of Joachim.Gabler@t-online.de

Sat Jan 23 10:30:00 GMT 1999
	- Changed imports in postgresql.jdbc1.ResultSetMetaData as for some